# ChangeLog for sci-biology/aghermann
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2015; Justin Lecher <jlec@gentoo.org> aghermann-1.0.3.ebuild:
  sci-biology/aghermann: Fix indention and use virtual for pkgconfig

  17 Jan 2015; Andrei Zavada <johnhommer@gmail.com> aghermann-1.0.3.ebuild:
  Initial packaging for gentoo.