@@ -13,16 +13,16 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 
 RDEPEND="
-	dev-lang/lua
+	dev-lang/lua:0
 	dev-libs/libconfig
 	dev-libs/libconfig
 	dev-libs/libunique:3
 	media-libs/libsamplerate
-	sci-libs/fftw
+	sci-libs/fftw:3.0
 	sci-libs/gsl
 	sci-libs/itpp
 	x11-libs/gtk+:3
-	x11-libs/vte"
+	x11-libs/vte:="
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
 
