@@ -3,6 +3,9 @@
 # $Header: $
 
   18 Feb 2015; Justin Lecher <jlec@gentoo.org> aghermann-1.0.3.ebuild:
+  sci-biology/aghermann: Fix slot operators
+
+  18 Feb 2015; Justin Lecher <jlec@gentoo.org> aghermann-1.0.3.ebuild:
   sci-biology/aghermann: Fix indention and use virtual for pkgconfig
 
   17 Jan 2015; Andrei Zavada <johnhommer@gmail.com> aghermann-1.0.3.ebuild:
